--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <!-- Search Box -->
         <div id="search-box"
-            class="absolute w-96 z-10 top-16 left-1/2 transform -translate-x-1/2 bg-white p-2 rounded-lg shadow-lg hidden transition duration-300">
+            class="absolute w-64 md:w-96 z-10 top-16 left-1/2 transform -translate-x-1/2 bg-white p-2 rounded-lg shadow-lg hidden transition duration-300">
             <div class="flex items-center space-x-2">
                 <input type="text" placeholder="Search for perfumes..."
                     class="w-full border border-gray-300 p-2 rounded-lg focus:outline-none" />
