--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </nav>
 
             <!-- Icons -->
-            <div class="flex gap-2 items-center space-x-4">
+            <div class="flex gap-1 items-center space-x-4">
                 <i id="search-icon" class="ri-search-line text-white text-xl cursor-pointer"></i>
                 <i class="ri-shopping-cart-line text-white text-xl cursor-pointer"></i>
                 <i class="ri-user-line text-white text-xl cursor-pointer"></i>
@@ -45,7 +45,7 @@
 
         <!-- Search Box -->
         <div id="search-box"
-            class="absolute w-64 md:w-96 z-10 top-16 left-1/2 transform -translate-x-1/2 bg-white p-2 rounded-lg shadow-lg hidden transition duration-300">
+            class="absolute w-72 md:w-96 z-10 top-16 left-1/2 transform -translate-x-1/2 bg-white p-2 rounded-lg shadow-lg hidden transition duration-300">
             <div class="flex items-center space-x-2">
                 <input type="text" placeholder="Search for perfumes..."
                     class="w-full border border-gray-300 p-2 rounded-lg focus:outline-none" />
@@ -69,7 +69,7 @@
         <button id="close-menu" class="absolute top-4 right-4 text-white text-3xl">
             <i class="ri-close-line"></i>
         </button>
-        <nav class="text-white text-lg p-10">
+        <nav class="text-white text-lg py-10 px-5">
             <!-- Logo -->
             <div class="text-white text-xl font-bold"><a href="index.html">PerfumeBrand</a></div>
             <ul class="mt-10 flex flex-col gap-5">
