--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="font-sans text-gray-800">
     <!-- Hero Section -->
-    <div id="hero" class="hero relative h-screen bg-cover !bg-left md:bg-center"
+    <div id="hero" class="hero relative h-[100dvh] bg-cover !bg-left md:bg-center"
         style="background-image: url('assets/img/slider-1.jpg');">
         <div class="absolute inset-0"></div>
 
@@ -33,7 +33,7 @@
             </nav>
 
             <!-- Icons -->
-            <div class="flex gap-1 items-center space-x-4">
+            <div class="flex gap-1 md:gap-2 items-center space-x-4">
                 <i id="search-icon" class="ri-search-line text-white text-xl cursor-pointer"></i>
                 <i class="ri-shopping-cart-line text-white text-xl cursor-pointer"></i>
                 <i class="ri-user-line text-white text-xl cursor-pointer"></i>
