add cart.html file

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <!-- Icons -->
             <div class="flex gap-1 md:gap-2 items-center space-x-4">
                 <i id="search-icon" class="ri-search-line text-white text-xl cursor-pointer"></i>
-                <i class="ri-shopping-cart-line text-white text-xl cursor-pointer"></i>
-                <i class="ri-user-line text-white text-xl cursor-pointer"></i>
+                <a href="cart.html"><i class="ri-shopping-cart-line text-white text-xl cursor-pointer"></i></a>
+                <a href="login.html"><i class="ri-user-line text-white text-xl cursor-pointer"></i></a>
                 <button id="menu-btn" class="block md:hidden text-white text-xl">
                     <i class="ri-menu-line"></i>
                 </button>
@@ -60,7 +60,7 @@
                     <input type="text" placeholder="Search for perfumes..."
                         class="w-full border border-gray-300 p-2 rounded-lg focus:outline-none" />
                     <button type="submit"
-                        class="py-2 px-3 bg-gray-600 transition-all duration-300 text-white rounded-lg">
+                        class="py-2 px-3 bg-gray-900 transition-all duration-300 text-white rounded-lg">
                         <i class="ri-search-line"></i>
                     </button>
                 </form>
