--- a/cart.html
+++ b/cart.html
@@ -86,9 +86,17 @@
                                 <a href="#" class="text-xl font-semibold text-black">Perfume Name</a>
                                 <p class="text-lg text-gray-600 mt-1">Amount: <span class="text-blue-500">$49.99</span></p>
                             </div>
-                            <!-- Remove Button -->
-                            <i class="ri-delete-bin-2-line text-red-500 text-2xl md:text-3xl cursor-pointer"></i>
+                            <div class="md:flex gap-10 items-center">
+                                <a href="checkput.html" class="hidden md:inline-block">
+                                    <button class="buy-now-btn text-lg py-3 px-8 bg-gray-900 hover:bg-gray-600 text-white rounded-md w-full h-full transition-all duration-300"> Buy Now
+                                    </button>
+                                </a>
+                                <!-- Remove Button -->
+                                <i class="ri-delete-bin-2-line text-red-500 text-2xl md:text-3xl cursor-pointer"></i>
+                            </div>
                         </div>
+                        <a href="checkput.html" class="mt-10 inline-block md:hidden w-full sm:w-[300px]"><button class="buy-now-btn text-lg py-3 px-5 bg-gray-900 hover:bg-gray-600 text-white rounded-md w-full h-full transition-all duration-300"> Buy Now
+                        </button></a>
                     </div>
                 </div>
             </div>
@@ -102,12 +110,12 @@
 
         <div class="w-full flex flex-col sm:flex-row justify-center gap-5 md:gap-10 mt-10">
             <!-- Total Cart Amount -->
-            <div class="flex gap-10 justify-between items-center bg-white p-6 shadow-lg rounded-lg w-full sm:w-1/2 lg:w-[300px]">
+            <div class="flex gap-10 justify-between items-center bg-white p-4 sm:p-5 shadow-lg rounded-lg w-full sm:w-1/2 lg:w-[300px]">
                 <h2 class="text-lg font-semibold">Total Amount:</h2>
                 <p id="totalAmount" class="text-xl font-bold text-blue-600">$0.00</p>
             </div>
 
-            <a href="checkput.html" class="inline-block w-full sm:w-1/2 lg:w-[300px] h-full"><button class="buy-now-btn text-lg p-6 bg-gray-900 hover:bg-gray-600 text-white rounded-md w-full h-full transition-all duration-300"> Buy Now
+            <a href="checkput.html" class="inline-block w-full sm:w-1/2 lg:w-[300px] h-full"><button class="buy-now-btn text-lg p-4 sm:p-5 bg-gray-900 hover:bg-gray-600 text-white rounded-md w-full h-full transition-all duration-300"> Buy Now
             </button></a>
         </div>
 
