--- a/cart.html
+++ b/cart.html
@@ -88,14 +88,14 @@
                             </div>
                             <div class="md:flex gap-10 items-center">
                                 <a href="checkput.html" class="hidden md:inline-block">
-                                    <button class="buy-now-btn text-lg py-3 px-8 bg-gray-900 hover:bg-gray-600 text-white rounded-md w-full h-full transition-all duration-300"> Buy Now
+                                    <button class="buy-now-btn text-lg py-3 px-8 bg-gray-900 hover:bg-gray-600 text-white rounded-md w-full h-full transition-all duration-300 shadow-md"> Buy Now
                                     </button>
                                 </a>
                                 <!-- Remove Button -->
                                 <i class="ri-delete-bin-2-line text-red-500 text-2xl md:text-3xl cursor-pointer"></i>
                             </div>
                         </div>
-                        <a href="checkput.html" class="mt-10 inline-block md:hidden w-full sm:w-[300px]"><button class="buy-now-btn text-lg py-3 px-5 bg-gray-900 hover:bg-gray-600 text-white rounded-md w-full h-full transition-all duration-300"> Buy Now
+                        <a href="checkput.html" class="mt-10 inline-block md:hidden w-full sm:w-[300px]"><button class="buy-now-btn text-lg py-3 px-5 bg-gray-900 hover:bg-gray-600 text-white rounded-md w-full h-full transition-all duration-300 shadow-md"> Buy Now
                         </button></a>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                 <p id="totalAmount" class="text-xl font-bold text-blue-600">$0.00</p>
             </div>
 
-            <a href="checkput.html" class="inline-block w-full sm:w-1/2 lg:w-[300px] h-full"><button class="buy-now-btn text-lg p-4 sm:p-5 bg-gray-900 hover:bg-gray-600 text-white rounded-md w-full h-full transition-all duration-300"> Buy Now
+            <a href="checkput.html" class="inline-block w-full sm:w-1/2 lg:w-[300px] h-full"><button class="buy-now-btn text-lg p-4 sm:p-5 bg-gray-900 hover:bg-gray-600 text-white rounded-md w-full h-full transition-all duration-300 shadow-md"> Buy Now
             </button></a>
         </div>
 
