--- a/index.html
+++ b/index.html
@@ -167,122 +167,122 @@
     <div class="max-w-6xl mx-auto grid grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 sm:gap-6 p-4">
         <!-- Manually added cards -->
         <div class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
-            <a href="#" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-1.jpg" alt="Rose Delight"
+            <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-1.jpg" alt="Rose Delight"
                     class="w-full h-full object-cover group-hover:scale-110 transition-all duration-500"></a>
             <div class="p-4">
-                <a href="#">
+                <a href="product.html">
                     <h3 class="text-lg font-semibold whitespace-nowrap overflow-hidden text-ellipsis">Rose Delight</h3>
                 </a>
                 <p class="text-gray-600">Category: Floral</p>
                 <p class="text-blue-600 font-bold mt-3 text-xl">$25.00</p>
-                <a href="#"><button
+                <a href="cart.html"><button
                         class="mt-4 w-full bg-gray-900 text-white p-2 rounded hover:bg-gray-600 transition-all duration-300">Add
                         to Cart</button></a>
             </div>
         </div>
 
         <div class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
-            <a href="#" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-2.jpg" alt="Citrus Splash"
+            <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-2.jpg" alt="Citrus Splash"
                     class="w-full h-full object-cover group-hover:scale-110 transition-all duration-500"></a>
             <div class="p-4">
-                <a href="#">
+                <a href="product.html">
                     <h3 class="text-lg font-semibold whitespace-nowrap overflow-hidden text-ellipsis">Citrus Splash</h3>
                 </a>
                 <p class="text-gray-600">Category: Citrus</p>
                 <p class="text-blue-600 font-bold mt-3 text-xl">$30.00</p>
-                <a href="#"><button
+                <a href="cart.html"><button
                         class="mt-4 w-full bg-gray-900 text-white p-2 rounded hover:bg-gray-600 transition-all duration-300">Add
                         to Cart</button></a>
             </div>
         </div>
 
         <div class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
-            <a href="#" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-3.jpg" alt="Sandalwood Bliss"
+            <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-3.jpg" alt="Sandalwood Bliss"
                     class="w-full h-full object-cover group-hover:scale-110 transition-all duration-500"></a>
             <div class="p-4">
-                <a href="#">
+                <a href="product.html">
                     <h3 class="text-lg font-semibold whitespace-nowrap overflow-hidden text-ellipsis">Sandalwood Bliss
                     </h3>
                 </a>
                 <p class="text-gray-600">Category: Woody</p>
                 <p class="text-blue-600 font-bold mt-3 text-xl">$35.00</p>
-                <a href="#"><button
+                <a href="cart.html"><button
                         class="mt-4 w-full bg-gray-900 text-white p-2 rounded hover:bg-gray-600 transition-all duration-300">Add
                         to Cart</button></a>
             </div>
         </div>
 
         <div class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
-            <a href="#" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-4.jpg" alt="Lemon Zest" class="w-full h-full object-cover group-hover:scale-110 transition-all duration-500"></a>
+            <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-4.jpg" alt="Lemon Zest" class="w-full h-full object-cover group-hover:scale-110 transition-all duration-500"></a>
             <div class="p-4">
-                <a href="#">
+                <a href="product.html">
                     <h3 class="text-lg font-semibold whitespace-nowrap overflow-hidden text-ellipsis">Lemon Zest</h3>
                 </a>
                 <p class="text-gray-600">Category: Citrus</p>
                 <p class="text-blue-600 font-bold mt-3 text-xl">$20.00</p>
-                <a href="#"><button
+                <a href="cart.html"><button
                         class="mt-4 w-full bg-gray-900 text-white p-2 rounded hover:bg-gray-600 transition-all duration-300">Add
                         to Cart</button></a>
             </div>
         </div>
 
         <div class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
-            <a href="#" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-5.jpg" alt="Jasmine Breeze"
+            <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-5.jpg" alt="Jasmine Breeze"
                     class="w-full h-full object-cover group-hover:scale-110 transition-all duration-500"></a>
             <div class="p-4">
-                <a href="#">
+                <a href="product.html">
                     <h3 class="text-lg font-semibold whitespace-nowrap overflow-hidden text-ellipsis">Jasmine Breeze
                     </h3>
                 </a>
                 <p class="text-gray-600">Category: Floral</p>
                 <p class="text-blue-600 font-bold mt-3 text-xl">$28.00</p>
-                <a href="#"><button
+                <a href="cart.html"><button
                         class="mt-4 w-full bg-gray-900 text-white p-2 rounded hover:bg-gray-600 transition-all duration-300">Add
                         to Cart</button></a>
             </div>
         </div>
 
         <div class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
-            <a href="#" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-6.jpg" alt="Cedarwood Charm"
+            <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-6.jpg" alt="Cedarwood Charm"
                     class="w-full h-full object-cover group-hover:scale-110 transition-all duration-500"></a>
             <div class="p-4">
-                <a href="#">
+                <a href="product.html">
                     <h3 class="text-lg font-semibold whitespace-nowrap overflow-hidden text-ellipsis">Cedarwood Charm
                     </h3>
                 </a>
                 <p class="text-gray-600">Category: Woody</p>
                 <p class="text-blue-600 font-bold mt-3 text-xl">$40.00</p>
-                <a href="#"><button
+                <a href="cart.html"><button
                         class="mt-4 w-full bg-gray-900 text-white p-2 rounded hover:bg-gray-600 transition-all duration-300">Add
                         to Cart</button></a>
             </div>
         </div>
         <div class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
-            <a href="#" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-7.jpg" alt="Cedarwood Charm"
+            <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-7.jpg" alt="Cedarwood Charm"
                     class="w-full h-full object-cover group-hover:scale-110 transition-all duration-500"></a>
             <div class="p-4">
-                <a href="#">
+                <a href="product.html">
                     <h3 class="text-lg font-semibold whitespace-nowrap overflow-hidden text-ellipsis">Cedarwood Charm
                     </h3>
                 </a>
                 <p class="text-gray-600">Category: Woody</p>
                 <p class="text-blue-600 font-bold mt-3 text-xl">$40.00</p>
-                <a href="#"><button
+                <a href="cart.html"><button
                         class="mt-4 w-full bg-gray-900 text-white p-2 rounded hover:bg-gray-600 transition-all duration-300">Add
                         to Cart</button></a>
             </div>
         </div>
         <div class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
-            <a href="#" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-8.jpg" alt="Cedarwood Charm"
+            <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-8.jpg" alt="Cedarwood Charm"
                     class="w-full h-full object-cover group-hover:scale-110 transition-all duration-500"></a>
             <div class="p-4">
-                <a href="#">
+                <a href="product.html">
                     <h3 class="text-lg font-semibold whitespace-nowrap overflow-hidden text-ellipsis">Cedarwood Charm
                     </h3>
                 </a>
                 <p class="text-gray-600">Category: Woody</p>
                 <p class="text-blue-600 font-bold mt-3 text-xl">$40.00</p>
-                <a href="#"><button
+                <a href="cart.html"><button
                         class="mt-4 w-full bg-gray-900 text-white p-2 rounded hover:bg-gray-600 transition-all duration-300">Add
                         to Cart</button></a>
             </div>
@@ -364,9 +364,6 @@
             </div>
         </div>
     </footer>
-
-
-
 
     <script src="assets/js/script.js"></script>
 </body>
