--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfume E-commerce</title>
+    <title>Add To Cart</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -14,7 +14,7 @@
 
     <!-- Header -->
     <header id="header"
-        class="header !bg-black w-full z-50 py-5 px-5 md:px-10 flex justify-between items-center transition-all duration-300 bg-transparent">
+        class="header sticky top-0 !bg-gray-900 w-full z-50 py-5 px-5 md:px-10 flex justify-between items-center transition-all duration-300 bg-transparent">
         <!-- Logo -->
         <div class="text-white text-xl font-bold"><a href="index.html">PerfumeBrand</a></div>
 
@@ -80,10 +80,10 @@
                 <div class="cart-item flex items-center justify-between border border-gray-200 rounded-lg p-4 bg-gray-50 shadow-sm">
                     <!-- Product Info -->
                     <div class="flex flex-col md:flex-row items-center w-full md:items-center justify-center">
-                        <a href="#" class="md:me-10"><img src="assets/img/item-1.jpg" alt="Product Image" class="w-20 h-20 object-cover rounded-md"></a>
+                        <a href="product.html" class="md:me-10"><img src="assets/img/item-1.jpg" alt="Product Image" class="w-20 h-20 object-cover rounded-md"></a>
                         <div class="flex justify-between w-full mt-5 md:mt-0 items-center">
                             <div>
-                                <a href="#" class="text-xl font-semibold text-black">Perfume Name</a>
+                                <a href="product.html" class="text-xl font-semibold text-black">Perfume Name</a>
                                 <p class="text-lg text-gray-600 mt-1">Amount: <span class="text-blue-500">$49.99</span></p>
                             </div>
                             <div class="md:flex gap-10 items-center">
@@ -95,8 +95,10 @@
                                 <i class="ri-delete-bin-2-line text-red-500 text-2xl md:text-3xl cursor-pointer"></i>
                             </div>
                         </div>
-                        <a href="checkput.html" class="mt-10 inline-block md:hidden w-full sm:w-[300px]"><button class="buy-now-btn text-lg py-3 px-5 bg-gray-900 hover:bg-gray-600 text-white rounded-md w-full h-full transition-all duration-300 shadow-md"> Buy Now
-                        </button></a>
+                        <a href="checkput.html" class="mt-10 inline-block md:hidden w-full sm:w-[300px]">
+                            <button class="buy-now-btn text-lg py-3 px-5 bg-gray-900 hover:bg-gray-600 text-white rounded-md w-full h-full transition-all duration-300 shadow-md"> Buy Now
+                            </button>
+                        </a>
                     </div>
                 </div>
             </div>
