--- a/cart.html
+++ b/cart.html
@@ -19,7 +19,7 @@
         <div class="text-white text-xl font-bold"><a href="index.html">PerfumeBrand</a></div>
 
         <!-- Navigation -->
-        <nav class="hidden md:flex space-x-6">
+        <nav class="hidden md:flex space-x-6 poppins-regular">
             <a href="index.html" class="text-white hover:text-gray-300">Home</a>
             <a href="shop.html" class="text-white hover:text-gray-300">Shop</a>
             <a href="about.html" class="text-white hover:text-gray-300">About</a>
@@ -43,7 +43,7 @@
         <div>
             <form action="" class="flex items-center space-x-2">
                 <input type="text" placeholder="Search for perfumes..."
-                    class="w-full border border-gray-300 p-2 rounded-lg focus:outline-none" />
+                    class="w-full border poppins-regular border-gray-300 p-2 rounded-lg focus:outline-none" />
                 <button type="submit" class="py-2 px-3 bg-gray-900 transition-all duration-300 text-white rounded-lg">
                     <i class="ri-search-line"></i>
                 </button>
@@ -60,7 +60,7 @@
         <nav class="text-white text-lg py-10 px-5">
             <!-- Logo -->
             <div class="text-white text-xl font-bold"><a href="index.html">PerfumeBrand</a></div>
-            <ul class="mt-10 flex flex-col gap-5">
+            <ul class="mt-10 flex flex-col gap-5 poppins-regular">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="about.html">About</a></li>
@@ -72,7 +72,7 @@
     <!-- Cart Section -->
     <section class="cart_section px-5 md:px-20">
 
-        <div class="max-w-6xl mx-auto bg-white shadow-lg rounded-lg p-6 mt-20">
+        <div class="max-w-6xl mx-auto bg-white shadow-lg rounded-lg p-6 mt-20 poppins-regular">
             <h1 class="text-2xl font-bold mb-6">Your Cart</h1>
             <!-- Cart Items Container -->
             <div id="cartItemsContainer" class="space-y-4">
