--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="text-white text-xl font-bold"><a href="index.html">PerfumeBrand</a></div>
 
             <!-- Navigation -->
-            <nav class="hidden md:flex space-x-6">
+            <nav class="hidden md:flex space-x-6 poppins-regular">
                 <a href="index.html" class="text-white hover:text-gray-300">Home</a>
                 <a href="shop.html" class="text-white hover:text-gray-300">Shop</a>
                 <a href="about.html" class="text-white hover:text-gray-300">About</a>
@@ -56,7 +56,7 @@
         <div id="search-box"
             class="fixed w-72 md:w-96 z-20 top-10 left-1/2 transform -translate-x-1/2 bg-white p-2 rounded-lg shadow-lg opacity-0 pointer-events-none transition-all duration-300">
             <div>
-                <form action="" class="flex items-center space-x-2">
+                <form action="" class="flex items-center space-x-2 poppins-regular">
                     <input type="text" placeholder="Search for perfumes..."
                         class="w-full border border-gray-300 p-2 rounded-lg focus:outline-none" />
                     <button type="submit"
@@ -68,7 +68,7 @@
         </div>
 
         <!-- Hero Content -->
-        <div class="absolute inset-0 z-10 flex flex-col justify-center items-center text-center text-white px-4 mt-32">
+        <div class="absolute poppins-regular inset-0 z-10 flex flex-col justify-center items-center text-center text-white px-4 mt-32">
             <h1 class="text-4xl md:text-6xl font-bold mb-4">Discover Your Fragrance</h1>
             <p class="text-lg md:text-xl">Experience luxury with every scent</p>
             <button
@@ -86,7 +86,7 @@
         <nav class="text-white text-lg py-10 px-5">
             <!-- Logo -->
             <div class="text-white text-xl font-bold"><a href="index.html">PerfumeBrand</a></div>
-            <ul class="mt-10 flex flex-col gap-5">
+            <ul class="mt-10 flex flex-col gap-5 poppins-regular">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="about.html">About</a></li>
@@ -129,7 +129,7 @@
     <!-- Filter and Sort Controls -->
     <div class="max-w-6xl mx-auto p-4 mt-20">
         <div class="grid grid-cols-2 md:grid-cols-none md:flex gap-6 justify-between items-center mb-6">
-            <div class="filter_option">
+            <div class="filter_option poppins-regular">
                 <!-- Sort Button -->
                 <h4 id="filterButton"
                     class="relative filter_select_btn cursor-pointer md:w-[200px] rounded-t-md md:rounded-md bg-gray-900 text-white px-5 py-2 flex items-center justify-between">
@@ -164,7 +164,7 @@
     </div>
 
     <!-- Product Cards -->
-    <div class="max-w-6xl mx-auto grid grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 sm:gap-6 p-4">
+    <div class="max-w-6xl mx-auto grid grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 sm:gap-6 p-4 poppins-regular">
         <!-- Manually added cards -->
         <div class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
             <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-1.jpg" alt="Rose Delight"
@@ -290,7 +290,7 @@
     </div>
 
     <!-- Pagination -->
-    <div class="max-w-6xl mt-10 mx-auto flex justify-center items-center space-x-2 p-4">
+    <div class="max-w-6xl mt-10 mx-auto flex justify-center items-center space-x-2 p-4 poppins-regular">
         <a href="#page1"
             class="transition-all duration-300 px-4 py-2 rounded shadow-md bg-white text-gray-700 hover:bg-gray-900 hover:text-white">Prev</a>
         <a href="#page1" class="transition-all duration-300 px-4 py-2 rounded shadow-md bg-gray-900 text-white">1</a>
@@ -302,7 +302,7 @@
             class="transition-all duration-300 px-4 py-2 rounded shadow-md bg-white text-gray-700 hover:bg-gray-900 hover:text-white">Next</a>
     </div>
 
-    <footer class="bg-gray-900 text-white mt-10">
+    <footer class="bg-gray-900 text-white mt-10 poppins-regular">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-10">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
 
