--- a/checkout.html
+++ b/checkout.html
@@ -37,6 +37,38 @@
         </div>
     </header>
 
+    <!-- Search Box -->
+    <div id="search-box"
+        class="fixed w-72 md:w-96 z-20 top-10 left-1/2 transform -translate-x-1/2 bg-white p-2 rounded-lg shadow-lg opacity-0 pointer-events-none transition-all duration-300">
+        <div>
+            <form action="" class="flex items-center space-x-2">
+                <input type="text" placeholder="Search for perfumes..."
+                    class="w-full border poppins-regular border-gray-300 p-2 rounded-lg focus:outline-none" />
+                <button type="submit" class="py-2 px-3 bg-gray-900 transition-all duration-300 text-white rounded-lg">
+                    <i class="ri-search-line"></i>
+                </button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Mobile Menu -->
+    <div id="mobile-menu"
+        class="fixed z-50 inset-0 bg-black bg-opacity-90 flex-col justify-center items-center transition-transform transform -translate-x-full">
+        <button id="close-menu" class="absolute top-4 right-4 text-white text-3xl">
+            <i class="ri-close-line"></i>
+        </button>
+        <nav class="text-white text-lg py-10 px-5">
+            <!-- Logo -->
+            <div class="text-white text-xl font-bold"><a href="index.html">PerfumeBrand</a></div>
+            <ul class="mt-10 flex flex-col gap-5 poppins-regular">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="shop.html">Shop</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+
     <!-- Checkout Section -->
     <section class="checkout_section px-5 md:px-20 my-20">
 
@@ -123,6 +155,7 @@
         </div>
     </section>
 
+    <script src="assets/js/cart.js"></script>
 </body>
 
 </html>
