--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
         </div>
 
         <!-- Hero Content -->
-        <div class="absolute poppins-regular inset-0 z-10 flex flex-col justify-center items-center text-center text-white px-4 mt-32">
+        <div
+            class="absolute poppins-regular inset-0 z-10 flex flex-col justify-center items-center text-center text-white px-4 mt-32">
             <h1 class="text-4xl md:text-6xl font-bold mb-4">Discover Your Fragrance</h1>
             <p class="text-lg md:text-xl">Experience luxury with every scent</p>
             <button
@@ -132,29 +133,35 @@
             <div class="filter_option poppins-regular">
                 <!-- Sort Button -->
                 <h4 id="filterButton"
-                    class="relative filter_select_btn cursor-pointer md:w-[200px] rounded-t-md md:rounded-md bg-gray-900 text-white px-5 py-2 flex items-center justify-between">
-                    Filter<i class="ri-arrow-drop-down-line text-2xl ms-2 select_down_arrow"></i>
+                    class="relative filter_select_btn cursor-pointer md:w-[200px] rounded-t-md md:rounded-md bg-gray-900 text-white px-5 py-2 flex items-center justify-center gap-3 shadow-md">
+                    Filter<i class="ri-filter-2-line text-2xl ms-2 select_down_arrow"></i>
                     <!-- filter Options Dropdown -->
                     <ul id="filterOptions"
                         class="hidden_filter shadow-md absolute z-20 top-full overflow-hidden rounded-b-md left-0 bg-white w-full opacity-0 pointer-events-none">
-                        <li class="p-3 text-nowrap border-b border-solid text-black border-gray-200 cursor-pointer">Woody</li>
-                        <li class="p-3 text-nowrap border-b border-solid text-black border-gray-200 cursor-pointer">Citrus</li>
-                        <li class="p-3 text-nowrap border border-solid text-black border-gray-200 cursor-pointer">Floral</li>
+                        <li class="p-3 text-nowrap border-b border-solid text-black border-gray-200 cursor-pointer">
+                            Woody</li>
+                        <li class="p-3 text-nowrap border-b border-solid text-black border-gray-200 cursor-pointer">
+                            Citrus</li>
+                        <li class="p-3 text-nowrap border border-solid text-black border-gray-200 cursor-pointer">Floral
+                        </li>
                     </ul>
                 </h4>
             </div>
-
-
+            
             <div class="sort_option">
                 <!-- Sort Button -->
                 <h4 id="sortButton"
-                    class="relative sort_select_btn cursor-pointer md:w-[200px] rounded-t-md md:rounded-md bg-gray-900 text-white px-5 py-2 flex items-center justify-between">
-                    Sort<i class="ri-arrow-drop-down-line text-2xl ms-2 select_down_arrow"></i>
+                    class="relative sort_select_btn cursor-pointer md:w-[200px] rounded-t-md md:rounded-md bg-gray-900 text-white px-5 py-2 flex items-center justify-center gap-3 shadow-md">
+                    Sort<i class="ri-sort-asc text-2xl ms-2 select_down_arrow"></i>
                     <!-- Sort Options Dropdown -->
                     <ul id="sortOptions"
                         class="hidden_sort absolute z-20 top-full overflow-hidden shadow-md rounded-b-md left-0 bg-white w-full opacity-0 pointer-events-none">
-                        <li class="p-3 text-nowrap border-b border-solid text-black border-gray-200 cursor-pointer text-sm">Price: Low to High</li>
-                        <li class="p-3 text-nowrap border border-solid text-black border-gray-200 cursor-pointer text-sm">Price: High to Low</li>
+                        <li
+                            class="p-3 text-nowrap border-b border-solid text-black border-gray-200 cursor-pointer text-sm">
+                            Price: Low to High</li>
+                        <li
+                            class="p-3 text-nowrap border border-solid text-black border-gray-200 cursor-pointer text-sm">
+                            Price: High to Low</li>
                     </ul>
                 </h4>
 
@@ -166,8 +173,10 @@
     <!-- Product Cards -->
     <div class="max-w-6xl mx-auto grid grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 sm:gap-6 p-4 poppins-regular">
         <!-- Manually added cards -->
-        <div class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
-            <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-1.jpg" alt="Rose Delight"
+        <div
+            class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
+            <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img
+                    src="assets/img/item-1.jpg" alt="Rose Delight"
                     class="w-full h-full object-cover group-hover:scale-110 transition-all duration-500"></a>
             <div class="p-4">
                 <a href="product.html">
@@ -181,8 +190,10 @@
             </div>
         </div>
 
-        <div class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
-            <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-2.jpg" alt="Citrus Splash"
+        <div
+            class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
+            <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img
+                    src="assets/img/item-2.jpg" alt="Citrus Splash"
                     class="w-full h-full object-cover group-hover:scale-110 transition-all duration-500"></a>
             <div class="p-4">
                 <a href="product.html">
@@ -196,8 +207,10 @@
             </div>
         </div>
 
-        <div class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
-            <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-3.jpg" alt="Sandalwood Bliss"
+        <div
+            class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
+            <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img
+                    src="assets/img/item-3.jpg" alt="Sandalwood Bliss"
                     class="w-full h-full object-cover group-hover:scale-110 transition-all duration-500"></a>
             <div class="p-4">
                 <a href="product.html">
@@ -212,8 +225,11 @@
             </div>
         </div>
 
-        <div class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
-            <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-4.jpg" alt="Lemon Zest" class="w-full h-full object-cover group-hover:scale-110 transition-all duration-500"></a>
+        <div
+            class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
+            <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img
+                    src="assets/img/item-4.jpg" alt="Lemon Zest"
+                    class="w-full h-full object-cover group-hover:scale-110 transition-all duration-500"></a>
             <div class="p-4">
                 <a href="product.html">
                     <h3 class="text-lg font-semibold whitespace-nowrap overflow-hidden text-ellipsis">Lemon Zest</h3>
@@ -226,8 +242,10 @@
             </div>
         </div>
 
-        <div class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
-            <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-5.jpg" alt="Jasmine Breeze"
+        <div
+            class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
+            <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img
+                    src="assets/img/item-5.jpg" alt="Jasmine Breeze"
                     class="w-full h-full object-cover group-hover:scale-110 transition-all duration-500"></a>
             <div class="p-4">
                 <a href="product.html">
@@ -242,8 +260,10 @@
             </div>
         </div>
 
-        <div class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
-            <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-6.jpg" alt="Cedarwood Charm"
+        <div
+            class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
+            <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img
+                    src="assets/img/item-6.jpg" alt="Cedarwood Charm"
                     class="w-full h-full object-cover group-hover:scale-110 transition-all duration-500"></a>
             <div class="p-4">
                 <a href="product.html">
@@ -257,8 +277,10 @@
                         to Cart</button></a>
             </div>
         </div>
-        <div class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
-            <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-7.jpg" alt="Cedarwood Charm"
+        <div
+            class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
+            <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img
+                    src="assets/img/item-7.jpg" alt="Cedarwood Charm"
                     class="w-full h-full object-cover group-hover:scale-110 transition-all duration-500"></a>
             <div class="p-4">
                 <a href="product.html">
@@ -272,8 +294,10 @@
                         to Cart</button></a>
             </div>
         </div>
-        <div class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
-            <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img src="assets/img/item-8.jpg" alt="Cedarwood Charm"
+        <div
+            class="group bg-white shadow-md hover:shadow-lg hover:shadow-[#9b9b9b] rounded-lg overflow-hidden transition-all duration-500">
+            <a href="product.html" class="inline-block w-full h-40 md:h-48 overflow-hidden"><img
+                    src="assets/img/item-8.jpg" alt="Cedarwood Charm"
                     class="w-full h-full object-cover group-hover:scale-110 transition-all duration-500"></a>
             <div class="p-4">
                 <a href="product.html">
