--- a/cart.html
+++ b/cart.html
@@ -110,7 +110,7 @@
 
         </div>
 
-        <div class="w-full flex flex-col sm:flex-row justify-center gap-5 md:gap-10 mt-10">
+        <div class="w-full flex flex-col sm:flex-row justify-center gap-5 md:gap-10 mt-10 poppins-regular">
             <!-- Total Cart Amount -->
             <div class="flex gap-10 justify-between items-center bg-white p-4 sm:p-5 shadow-lg rounded-lg w-full sm:w-1/2 lg:w-[300px]">
                 <h2 class="text-lg font-semibold">Total Amount:</h2>
