--- a/checkout.html
+++ b/checkout.html
@@ -147,9 +147,11 @@
 
             <!-- Place Order Button -->
             <div class="mt-10 text-center">
-                <button type="submit" class="w-full bg-gray-900 hover:bg-gray-600 text-white text-lg py-4 px-8 rounded-lg shadow-md transition-all duration-300">
-                    Place Order
-                </button>
+                <a href="order-confirmation.html">
+                    <button type="submit" class="w-full bg-gray-900 hover:bg-gray-600 text-white text-lg py-4 px-8 rounded-lg shadow-md transition-all duration-300">
+                        Place Order
+                    </button>
+                </a>
             </div>
 
         </div>
