--- a/product.html
+++ b/product.html
@@ -73,7 +73,7 @@
     <div class="pt-5 lg:py-10 px-5 md:px-20 fade-in lg:mt-10">
         <div class="grid lg:grid-cols-2 justify-between lg:gap-10">
             <!-- Product Image -->
-            <div class="lg:sticky lg:top-10">
+            <div class="lg:sticky lg:top-[148px] h-fit">
                 <img src="assets/img/item-1.jpg" alt="Perfume Product Image"
                     class="w-full h-80 object-cover transition-transform duration-500 hover:scale-105" />
             </div>
