--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     </ul>
                 </h4>
             </div>
-            
+
             <div class="sort_option">
                 <!-- Sort Button -->
                 <h4 id="sortButton"
@@ -344,10 +344,10 @@
                     <h3 class="text-lg font-semibold whitespace-nowrap overflow-hidden text-ellipsis mb-4">Quick Links
                     </h3>
                     <ul class="space-y-2 text-gray-400">
-                        <li><a href="#" class="hover:text-white">Home</a></li>
+                        <li><a href="index.html" class="hover:text-white">Home</a></li>
                         <li><a href="#" class="hover:text-white">Shop</a></li>
-                        <li><a href="#" class="hover:text-white">About Us</a></li>
-                        <li><a href="#" class="hover:text-white">Contact</a></li>
+                        <li><a href="about.html" class="hover:text-white">About Us</a></li>
+                        <li><a href="contact.html" class="hover:text-white">Contact</a></li>
                     </ul>
                 </div>
 
@@ -356,7 +356,7 @@
                     <h3 class="text-lg font-semibold whitespace-nowrap overflow-hidden text-ellipsis mb-4">Customer
                         Service</h3>
                     <ul class="space-y-2 text-gray-400">
-                        <li><a href="#" class="hover:text-white">FAQs</a></li>
+                        <li><a href="faq.html" class="hover:text-white">FAQs</a></li>
                         <li><a href="#" class="hover:text-white">Shipping Policy</a></li>
                         <li><a href="#" class="hover:text-white">Returns & Exchanges</a></li>
                         <li><a href="#" class="hover:text-white">Privacy Policy</a></li>
