--- a/order-confirmation.html
+++ b/order-confirmation.html
@@ -97,13 +97,20 @@
             </div>
 
             <!-- Action Buttons -->
-            <div class="flex justify-center gap-5 mt-6">
+            <div class="flex flex-col md:flex-row justify-center gap-5 mt-6">
+                <a href="profile.html#order-history">
+                    <button
+                        class="px-6 py-3 bg-white-900 text-gray-900 rounded-lg shadow-md hover:bg-gray-100 transition-all">
+                        View Order Detail
+                    </button>
+                </a>
                 <a href="index.html">
                     <button
-                        class="px-6 py-3 bg-gray-900 text-white rounded-lg shadow-md hover:bg-gray-700 transition-all">
+                        class="px-6 py-3 bg-gray-900 text-white rounded-lg shadow-md hover:bg-gray-600 transition-all">
                         Continue Shopping
                     </button>
                 </a>
+                
             </div>
         </div>
     </section>
